# ESP32_C3_SCD41

./: BLE_INTERFACE.md  CMakeLists.txt  README.md  app.overlay  build.bat  build.sh  dashboard.html  flash.bat  flash.sh  monitor.bat  monitor.sh  prj.conf  run_all.bat  run_all.sh
src/: app_config.c  app_config.h  ble_mgr.c  ble_mgr.h  display_mgr.c  display_mgr.h  main.c  sensors.c  sensors.h  shell_cmds.c  shell_cmds.h
