# SPDX-License-Identifier: Apache-2.0

cmake_minimum_required(VERSION 3.20.0)
find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
project(esp32_c3_scd41)

target_sources(app PRIVATE 
    src/main.c
    src/app_config.c
    src/sensors.c
    src/display_mgr.c
    src/shell_cmds.c
    src/ble_mgr.c
)
